@@ -2,32 +2,34 @@ package org.unitedlands.politics.commands.admin.actorprofile.handlers.reactions;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 import org.bukkit.Bukkit;
 import org.bukkit.command.CommandSender;
-import org.unitedlands.classes.BaseCommandHandler;
-import org.unitedlands.interfaces.IMessageProvider;
+import org.unitedlands.annotations.UnitedSubCommand;
 import org.unitedlands.politics.UnitedPolitics;
 import org.unitedlands.politics.classes.EventReaction;
+import org.unitedlands.politics.classes.configs.RecordDefinitionConfig;
+import org.unitedlands.politics.managers.ActorProfileManager;
 import org.unitedlands.politics.utils.GeopolUtils;
 import org.unitedlands.politics.wrappers.interfaces.IGeopolObjectWrapper;
-import org.unitedlands.utils.Messenger;
+import org.unitedlands.registrars.command.UnitedCommandExecutor;
+import org.unitedlands.utils.United;
 
-public class AdminCreateReactionCommand extends BaseCommandHandler<UnitedPolitics> {
-
-    public AdminCreateReactionCommand(UnitedPolitics plugin, IMessageProvider messageProvider) {
-        super(plugin, messageProvider);
-    }
+@UnitedSubCommand(
+    parent = CmdAdminActorProfileReactions.class,
+    name = "create",
+    usage = "/upa actorprofile reactions create <actor> <event> <reaction> <amount>",
+    catchAll = true
+)
+public class CmdAdminActorProfileReactionsCreate implements UnitedCommandExecutor {
 
     @Override
     public List<String> handleTab(CommandSender sender, String[] args) {
         if (args.length == 2) {
-            return plugin.getConfig().getStringList("event-keys");
+            return UnitedPolitics.instance().getConfig().getStringList("event-keys");
         } else if (args.length == 3) {
-            return plugin.getConfig().getConfigurationSection("record-definitions").getKeys(false).stream()
-                    .collect(Collectors.toList());
+            return RecordDefinitionConfig.get().recordDefinitions().keys().stream().toList();
         }
         return new ArrayList<>();
     }
@@ -35,22 +37,19 @@ public class AdminCreateReactionCommand extends BaseCommandHandler<UnitedPolitic
     @Override
     public void handleCommand(CommandSender sender, String[] args) {
         if (args.length != 4) {
-            Messenger.sendMessage(sender, messageProvider.getList("messages.usages.reaction.create"), null,
-                    messageProvider.get("messages.prefix"));
+            sendUsage(sender);
             return;
         }
 
         IGeopolObjectWrapper actor = GeopolUtils.findGeopolObject(args[0]);
         if (actor == null) {
-            Messenger.sendMessage(sender, messageProvider.get("messages.errors.general.geopol-obj-not-found"),
-                    Map.of("obj-name", args[0]), messageProvider.get("messages.prefix"));
+            United.messenger().send(sender, "errors.general.geopol-obj-not-found");
             return;
         }
 
-        var profile = plugin.getActorProfileManager().getActorProfile(actor.getUUID());
+        var profile = ActorProfileManager.instance().getActorProfile(actor.getUUID());
         if (profile == null) {
-            Messenger.sendMessage(sender, messageProvider.get("messages.errors.actorprofile.no-profile"), null,
-                    messageProvider.get("messages.prefix"));
+            United.messenger().send(sender, "errors.actorprofile.no-profile");
             return;
         }
 
@@ -63,8 +62,7 @@ public class AdminCreateReactionCommand extends BaseCommandHandler<UnitedPolitic
         try {
             amount = Double.parseDouble(args[3]);
         } catch (Exception ex) {
-            Messenger.sendMessage(sender, messageProvider.get("messages.errors.general.number-format-error"),
-                    Map.of("input", args[3]), messageProvider.get("messages.prefix"));
+            United.messenger().send(sender, "errors.general.number-format-error", args[3]);
             return;
         }
 
@@ -72,8 +70,7 @@ public class AdminCreateReactionCommand extends BaseCommandHandler<UnitedPolitic
             if (actorReactions.stream().filter(
                     r -> r.getEventKey().equals(eventKey) && r.getReactionReputationKey().equals(reactionRecordKey))
                     .findAny().orElse(null) != null) {
-                Messenger.sendMessage(sender, messageProvider.get("messages.errors.actorprofile.reaction-exists"), null,
-                        messageProvider.get("messages.prefix"));
+                United.messenger().send(sender, "errors.actorprofile.reaction-exists");
             }
         } else {
             actorReactions = new ArrayList<>();
@@ -84,12 +81,11 @@ public class AdminCreateReactionCommand extends BaseCommandHandler<UnitedPolitic
 
         profile.setEventReactions(actorReactions);
 
-        if (plugin.getActorProfileManager().addOrUpdateActorProfile(profile)) {
+        if (ActorProfileManager.instance().addOrUpdateActorProfile(profile)) {
             var cmd = "upa actorprofile edit " + actor.getName();
             Bukkit.dispatchCommand(sender, cmd);
         } else {
-            Messenger.sendMessage(sender, messageProvider.get("messages.errors.general.db-save-error"),
-                    null, messageProvider.get("messages.prefix"));
+            United.messenger().send(sender, "errors.general.db-save-error");
         }
     }
 
